# DecentralChain

./: .actrc  .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .secrets.example  .trivyignore  4-DATASERVICE.md  5-BIOME-NX-MIGRATION-PLAN.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION_SUMMARY.md  README.md  SECURITY.md  accounts.html  biome.json  docker-compose.test.yml  eslint.config.mjs  knip.json  lefthook.yml  notification.html  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  readme.md  renovate.json  tsconfig.app.json  tsconfig.base.json  tsup.config.ts  vitest.base.config.ts  vitest.config.ts
.gemini/: settings.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/act/: pull_request.json
.github/prompts/: add-dependency.prompt.md  debug-build.prompt.md  explore-workspace.prompt.md  upstream-sync.prompt.md
.github/workflows/: _publish-maven.yml  blst-java.yml  blst.yml  bps.yml  ci.yml  codeql.yml  cubensis-e2e.yml  cubensis-nightly-e2e.yml  curve25519-java.yml  curve25519.yml  deploy-admin-dashboard.yml  deploy-bps.yml  deploy-cubensis.yml  deploy-data-service.yml  deploy-exchange.yml  deploy-node-dashboard.yml  deploy-scanner.yml  deploy-websocket-api.yml  groth16-java.yml  groth16.yml  integration.yml  java-sdk.yml  list-senders.yml  mvn-publish.yml  publish-blst-java.yml  publish-blst.yml  publish-crypto.yml  publish-curve25519-java.yml  publish-curve25519.yml  publish-groth16-java.yml  publish-groth16.yml  publish-java-sdk.yml  publish-protobuf-schemas.yml  publish-protobuf-serialization.yml  publish-ride.yml  publish-transactions-java.yml  publish-transactions.yml  publish-wavesj.yml  publish-zwaves.yml  release-staged-deployments.yml  (+11 more)
apps/admin-dashboard/: .gitignore  Dockerfile  biome.json  package.json  react-router.config.ts  vite.config.ts  vitest.config.ts
apps/blockchain-postgres-sync/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  project.json
apps/blockchain-postgres-sync/.cargo/: config.toml
apps/blockchain-postgres-sync/.config/: nextest.toml
apps/blockchain-postgres-sync/.github/workflows/: ci.yml
apps/blockchain-postgres-sync/migrations/2022-04-27-111623_initial/: down.sql  up.sql
apps/blockchain-postgres-sync/migrations/2025-08-28-080719_added_func__get_decimals_or_warn/: up.sql
apps/blockchain-postgres-sync/migrations/2026-05-29-180201_rename_waves_to_dcc/: down.sql  up.sql
apps/blockchain-postgres-sync/migrations/2026-06-28-000000_add_txs_19_commit_to_generation/: down.sql  up.sql
apps/blockchain-postgres-sync/proto/dcc/: amount.proto  block.proto  invoke_script_result.proto  order.proto  recipient.proto  reward_share.proto  state_snapshot.proto  transaction.proto  transaction_state_snapshot.proto
apps/blockchain-postgres-sync/proto/dcc/events/: events.proto
apps/blockchain-postgres-sync/proto/dcc/events/grpc/: blockchain_updates.proto
apps/blockchain-postgres-sync/proto/waves/: amount.proto  block.proto  invoke_script_result.proto  order.proto  recipient.proto  reward_share.proto  state_snapshot.proto  transaction.proto  transaction_state_snapshot.proto
apps/blockchain-postgres-sync/proto/waves/events/: events.proto
apps/blockchain-postgres-sync/proto/waves/events/grpc/: blockchain_updates.proto
apps/blockchain-postgres-sync/src/lib/: chain.rs  db.rs  error.rs  lib.rs  models.rs  proto.rs  publisher.rs  schema.rs  utils.rs  waves.rs
apps/blockchain-postgres-sync/src/lib/config/: consumer.rs  mod.rs  postgres.rs
apps/blockchain-postgres-sync/src/lib/consumer/: mod.rs  updates.rs
apps/blockchain-postgres-sync/src/lib/consumer/models/: asset_tickers.rs  assets.rs  block_microblock.rs  candles.rs  dcc_data.rs  mod.rs
apps/blockchain-postgres-sync/src/lib/consumer/models/txs/: convert.rs  mod.rs
apps/blockchain-postgres-sync/src/lib/consumer/repo/: mod.rs  pg.rs
apps/blockchain-postgres-sync/tests/: consumer_repo.rs  db_integration.rs  proptest_chain.rs  proptest_utils.rs  proptest_waves.rs  schema_test.rs
apps/cubensis-connect/: .env  INFRA-READINESS-CHECKLIST.md  README.md  biome.json  docker-compose.yml  package.json  postcss.config.cjs  postcss.config.js  tsconfig.base.json  vite.config.ts  vitest.config.ts  vitest.unit.config.ts
apps/data-service/: .dockerignore  Dockerfile  README.md  biome.json  lefthook.yml  package.json  project.json  tsconfig.json  tsdown.config.ts  (+4 more)
apps/load-tester/: Cargo.toml  README.md
apps/load-tester/src/: cli.rs  crypto.rs  main.rs  metrics.rs  tx.rs  worker.rs
apps/websocket-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
apps/websocket-api/.github/workflows/: ci.yml
apps/websocket-api/src/: client.rs  config.rs  error.rs  healthcheck.rs  lib.rs  main.rs  messages.rs  metrics.rs  refresher.rs  repo.rs  server.rs  shard.rs  topic.rs  updater.rs  websocket.rs
apps/websocket-api/src/tests/: health.rs  messages.rs  mod.rs  shard.rs  topic.rs  websocket.rs
docs/: ARCHITECTURE.md  BIOME-UPGRADE-ASSESSMENT.md  CONVENTIONS.md  ECOSYSTEM.md  MUI-V9-MIGRATION.md  NODE-AUDIT.md  PERFORMANCE-PROFILING.md  PROD-READINESS-TODO.md  RELEASE-CHECKLIST.md  RELEASE-GATES.md  SECRETS-OBSERVABILITY.md  SECURITY-AUDIT-REPORT.md  SECURITY-AUDIT.md  STATUS.md  UPSTREAM.md  grpc-proto-compatibility-audit.md
e2e/: package.json  playwright.config.ts  project.json
logs_62438062403/: 1_ci.txt
logs_62450682684/: 1_ci.txt
roadmap-project/: DCC-252-LANG-FORK-PLAN.md
scripts/: archive-polyrepos.sh  check-boundaries.mjs  fund-faucet-wallet.mjs  integration-test.mjs  local-ci.sh  run-with-required-node.sh
src/: ProviderCubensis.ts  Signable.ts  adapter.ts  background.ts  constants.ts  crypto.ts  decorators.ts  general.ts  index.ts  inpage.ts  make-tx.ts  nodeInteraction.ts  transaction-type.ts  transactions.ts  utils.ts
stand/: iframe.html  parent.html
test/: AccountManagement.ts  Bus.test.ts  NetworkManagement.ts  TabsManipulation.ts  WindowAdapter.test.ts  adapter.spec.ts  compiler.test.ts  proto-serialize.spec.ts  utils.spec.ts
(+1507 files in other folders)
