[package]
name = "blockchain-postgres-sync"
version = "2.0.0"
edition = "2021"
rust-version = "1.88"
description = "Blockchain-to-PostgreSQL sync daemon for the DecentralChain network"
license = "Apache-2.0"

[lib]
name = "app_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[dependencies]
# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async runtime
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }

# gRPC / Protobuf  (proto files bundled in proto/, compiled by build.rs)
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
prost = "0.14.3"

# Database
diesel = { version = "2.3.9", default-features = false, features = [
    "chrono", "postgres", "r2d2", "32-column-tables", "serde_json", "numeric",
] }
diesel_migrations = { version = "2.3.0", features = ["postgres"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres", "rt_tokio_1"] }
r2d2 = "0.8.10"

# Configuration
envy = "0.4.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.4.10", features = ["serde"] }
base64 = "0.22.1"

# Cryptography / encoding
blake2 = "0.10"
sha3 = "0.10"
bs58 = "0.5.1"
hex = "0.4.3"
bytes = "1"
percent-encoding = "2"
regex = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14.0"

# HTTP server (health / readiness endpoint)
axum = { version = "0.8.9", features = ["tokio"] }

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[build-dependencies]
tonic-prost-build = "0.14.6"
